--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,70 @@
 html{
-    background-color: pink;
+    background-color: #fff;
 }
 
 *{
     box-sizing: border-box;
+}
+
+body{
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+
+
+/*I følgende kode som hører til header-video har jeg brukt GitHub Copilot for å finne ut av hvordan jeg justerer header-videoen*/
+header{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+header video{
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+
+#header-index{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+/*--------------------------------------------------*/
+
+header h1{
+    font-size: 40px;
+}
+
+/*Kode for å endre style på button er hentet fra tidligere arbeid, ref. oblig 3*/
+button{
+    background-color: #e6bd43;
+    border: none;
+    padding: 12px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/*Hover-effekt kode har jeg funnet på https://www.w3schools.com/css/css3_buttons.asp*/
+button:hover{
+    background-color: #000;
+    color: #e6bd43;
+}
+
+header nav ul{
+    gap: 1rem;
+    list-style: none;
+
+}
+
+ul {
+    display: flex;
+}
+
+ul .logo {
+    margin-right: auto;
 }
