--- a/css/style.css
+++ b/css/style.css
@@ -2,69 +2,288 @@ html{
     background-color: #fff;
 }
 
-*{
-    box-sizing: border-box;
-}
+
 
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Roboto, sans-serif;
+    margin: 0;
 }
 
+#grid-container{
+display: grid;
+grid-template-areas: "header"
+                    "main"
+                    "footer";
+grid-template-rows: auto 1fr auto;
 
+}
 
-/*I følgende kode som hører til header-video har jeg brukt GitHub Copilot for å finne ut av hvordan jeg justerer header-videoen*/
 header{
-    position: relative;
-    width: 100%;
-    height: 100%;
+    grid-area: header;
 }
 
-header video{
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-    opacity: 0.5;
+main{
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    grid-area: main;
+}
+
+footer{
+    grid-area: footer;
 }
 
 
-#header-index{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+.video{
+    display:block;
 }
-/*--------------------------------------------------*/
 
-header h1{
-    font-size: 40px;
-}
 
 /*Kode for å endre style på button er hentet fra tidligere arbeid, ref. oblig 3*/
-button{
+.button1{
     background-color: #e6bd43;
     border: none;
-    padding: 12px;
+    padding: 20px;
     font-size: 20px;
     font-weight: bold;
+    text-decoration: none;
+    color: black;
+    margin: 30px;
+}
+
+.a button1{
+    text-decoration: none;
+    color: black;
 }
 
 /*Hover-effekt kode har jeg funnet på https://www.w3schools.com/css/css3_buttons.asp*/
-button:hover{
+.button1:hover{
     background-color: #000;
     color: #e6bd43;
+}
+
+.button1:hover a{
+    color:#e6bd43;
 }
 
 header nav ul{
     gap: 1rem;
     list-style: none;
-
+    display: block;
+    text-align: center;
+    padding-left: 0px;
 }
 
 ul {
     display: flex;
 }
 
-ul .logo {
-    margin-right: auto;
+.logo img{
+    width: 80px;
+}
+
+nav ul li{
+    padding-bottom: 10px;
+}
+
+ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+/*a.active koden er hentet fra https://www.w3schools.com/css/css_link.asp*/
+ul li a.active{
+    text-decoration: underline;
+    text-decoration-color:#e6bd43;
+    font-weight: bold;
+}
+
+.contact-link{
+    background-color: #e6bd43;
+    border: none;
+    padding: 10px;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    margin-left: 138px;
+    margin-right: 138px;
+}
+
+
+.bilde-index{
+    width: 100%;
+    height: 520px;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+.overlay-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    color: #000;
+    display:grid;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    text-align: center;
+}
+
+.overlay-text h1{
+    font-size: 40px;
+}
+
+.overlay-text p{
+    font-size: 15px;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+.header-index {
+    position: relative;
+}
+
+.index1{
+    display: grid;
+    grid-row: 2;
+}
+
+.index2{
+    grid-row: 3;
+}
+
+.index1 h2{
+    font-size: 28px;
+    text-align: center;
+    margin-top: 100px;
+}
+
+.index1 p{
+    text-align: center;
+    padding-left: 35px;
+    padding-right: 35px;
+    margin-bottom: 100px;
+}
+
+.index2{
+    background-color:#e6bd43;
+}
+
+.index2 img{
+    width: 260px;
+    margin: 55px;
+}
+
+.index2 h2{
+    font-size: 28px;
+    text-align: center;
+}
+
+.index2 p{
+    text-align: center;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+
+
+.index2 a{
+    padding: 20px 20px;
+    border: 3px solid #000;
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    justify-content: center;
+    margin: 60px;
+    font-weight: bold;
+}
+
+.index3 ul{
+    list-style: none;
+    display:flex;
+    flex-direction: column;
+    padding: 0px;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+
+
+.index3 h3{
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 25px;
+}
+
+.index3 p{
+    font-size: 15px;
+    text-align: center;
+    font-weight: normal;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+ul li a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.newsletter{
+    background-color: #dddddd;
+    padding: 40px;
+}
+
+/*Følgende kode har jeg brukt Github CoPilot for å komme frem til*/
+input[type="email"]{
+    width: 50%;
+    border-style: none;
+    padding: 10px;
+    color: #000;
+}
+
+input[type="email"]::placeholder{
+    color: #000;
+}
+
+button[type="submit"] {
+    padding: 10px;
+    border-style: none;
+    background-color:#e6bd43;
+}
+/*-------------------*/
+
+.logoseksjon{
+    background-color:#252525;
+    padding: 40px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.logoseksjon img{
+    width: 80px;
+}
+
+#top{
+    position: fixed;
+    bottom: 304px;
+    right: 9px;
+    border: none;
+    outline: none;
+    background-color: #000;
+    color: white;
+    padding: 24px;
+    font-size:30px;
+}
+
+@media screen and (max-width: 600px) {
+.video{
+    display: none;
+}
+
+
+
 }
